force-app/main/default/objects/Mission__c/Mission__c.object-meta.xml
<CustomObject>
    <label>Mission</label>
    <nameField>
        <label>Mission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Missions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>