force-app/main/default/objects/Mission__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>who is this mission for?</description>
    <inlineHelpText>who is this mission for?</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Missions</relationshipLabel>
    <relationshipName>Missions</relationshipName>
    <type>Lookup</type>
</CustomField>