force-app/main/default/objects/Mission__c/fields/Assembly_Time__c.field-meta.xml
<CustomField>
    <fullName>Assembly_Time__c</fullName>
    <label>Assembly Time</label>
    <type>DateTime</type>
</CustomField>