force-app/main/default/objects/Mission__c/fields/Covert__c.field-meta.xml
<CustomField>
    <fullName>Covert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>plainclothes required, avoid being noticed</description>
    <inlineHelpText>plainclothes required, avoid being noticed</inlineHelpText>
    <label>Covert</label>
    <type>Checkbox</type>
</CustomField>