force-app/main/default/objects/Mission__c/fields/Equipment_Count__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Count__c</fullName>
    <label>Equipment Count</label>
    <summarizedField>Equipment_Needed__c.Quantity__c</summarizedField>
    <summaryForeignKey>Equipment_Needed__c.Mission__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>