force-app/main/default/objects/Mission__c/fields/Mission_Description__c.field-meta.xml
<CustomField>
    <fullName>Mission_Description__c</fullName>
    <label>Mission Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>