force-app/main/default/objects/Mission__c/fields/Team_Members_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Team_Members_Assigned__c</fullName>
    <label>Team Members Assigned</label>
    <summaryForeignKey>Assignment__c.Mission__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>